# jrpc_django_task

./: Dockerfile  README.md  env.example  manage.py  pyproject.toml
rpc_app/: apps.py  forms.py  rpc_client.py  urls.py  views.py
rpc_app/templates/rpc_app/: rpc_form.html
rpc_project/: asgi.py  settings.py  urls.py  wsgi.py
