[tool.poetry]
name = "test-project"
version = "0.1.0"
description = "test task django+rpc"
authors = ["Semen Shemagonov <semen.shemagonov@scive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
python-dotenv = "^1.0.1"
pip-system-certs = "^4.0"
certifi = "^2024.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
